--- a/src/app/features/shared/user-not-found/user-not-found.component.html
+++ b/src/app/features/shared/user-not-found/user-not-found.component.html
@@ -2,7 +2,7 @@
 <div class="card border p-3 " >
         <div class="card-body">
             <div class="image">
-                <img src="../../../../assets/user-images/blank-profile-picture-973460_640.png"
+                <img appPreloadimage src=""
                  class="cover-image  rounded-circle" />
             </div>
             
