--- a/src/app/features/users-components/i-user/i-user.component.html
+++ b/src/app/features/users-components/i-user/i-user.component.html
@@ -3,7 +3,7 @@
         
             <div class="card-body">
     <div class="image" style="width: 128px; height: 128px;">
-        <img [src]="user?.avatar"   class="cover-image w-100 h-100 rounded-circle" />
+        <img  [src]="user?.avatar" appPreloadimage  class="cover-image w-100 h-100 rounded-circle" />
     </div>
     
     <div class="card-body text-center">
