update navbar and adding a  SidebarCom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+<section class="row">
+    <div class="col-lg-3 col-12 "> 
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-lg-9 col-12">
+            <router-outlet></router-outlet>
+    </div>
+</section>
   
