--- a/src/app/features/shared/user-not-found/user-not-found.component.html
+++ b/src/app/features/shared/user-not-found/user-not-found.component.html
@@ -1,13 +1,10 @@
 <section>
 <div class="card border p-3 " >
-        <div class="card-body">
-            <div class="image">
-                <img appPreloadimage src=""
-                 class="cover-image  rounded-circle" />
-            </div>
-            
+        <div class="card-body text-center">
             <div class="card-body text-center">
-                <div class=""> i'm not exist </div>
+                <div class=""> *_* </div>
+                <div class=""> Sorry , I'm not Exist </div>
+
             </div>
         </div>
 </div>
