--- a/src/app/features/users-components/user-list/user-list.component.html
+++ b/src/app/features/users-components/user-list/user-list.component.html
@@ -1,5 +1,5 @@
-<section class="d-flex flex-column align-items-center gap-4 mt-4">
-    <div class="d-flex flex-row gap-2 flex-wrap align-items-center m-3" >
+<section  class="d-flex flex-column align-items-center gap-4 mt-4">
+    <div  class="d-flex flex-row gap-2 flex-wrap align-items-center justify-content-lg-start justify-content-center" >
         @for (user of users; track user;) {
             <app-i-user [user]="user"></app-i-user>
         }@empty {
