--- a/src/app/features/users-components/i-user/i-user.component.html
+++ b/src/app/features/users-components/i-user/i-user.component.html
@@ -1,21 +1,20 @@
 <section >
-    <div class="card bg-primary overflow-hidden border p-3 " >
-        
-            <div class="card-body">
-    <div class="image" style="width: 128px; height: 128px;">
-        <img  [src]="user?.avatar" appPreloadimage  class="cover-image w-100 h-100 rounded-circle" />
-    </div>
-    
-    <div class="card-body text-center">
-        <div class="">
-                {{user?.first_name}}
+    <div class="card bg-primary overflow-hidden border p-3 " >      
+        <div class="card-body">
+            <div class="image" style="width: 128px; height: 128px;">
+                <img  defult='https://via.placeholder.com/150' [src]="user?.avatar" appPreloadimage  class="cover-image w-100 h-100 rounded-circle" />
+            </div>
+            
+            <div class="opacity-0 position-absolute top-0 start-0 end-0 end-0 p-5 card-body show text-center">
+                <div class="">
+                        {{user?.first_name}}
+                </div>
+                <div class="mt-2">
+                    <a [routerLink]="['/user',user?.id]">  <button class=" btn border text-white "> view </button></a>
+                </div>
+            </div>
         </div>
-        <div class="mt-2">
-            <a [routerLink]="['/userslist',user?.id]">  <button class=" btn border text-white "> view </button></a>
-        </div>
-    </div>
-</div>
 
-</div>
+    </div>
 
 </section>
