--- a/src/app/features/core/navbar/navbar.component.html
+++ b/src/app/features/core/navbar/navbar.component.html
@@ -5,7 +5,8 @@
         
         <div style="width: 200px;" >
             <div *ngIf="hideInput | async"  class="d-flex" >
-                <div  (click)="showSearchfield()" class="rounded-circle border text-center p-2 mx-1" style="width: 40px; height: 40px;" >
+                <div  (click)="showSearchfield()" class="rounded-circle border text-center p-2 mx-1"
+                 style="width: 40px; height: 40px;" >
                     <mat-icon> search </mat-icon>
                 </div>
                 <div [appSearchfield]="searchVal" class="form-group transitions" style="width: 0px; overflow: hidden; " >
