--- a/src/app/features/core/navbar/navbar.component.html
+++ b/src/app/features/core/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="bg-primary">
     <nav class="container py-3 d-flex flex-lg-row flex-column align-items-center justify-content-between text-white" >
         <h3> Maids </h3>
-        <h3> Users</h3>
+        <h3> <u></u>users</h3>
         
         <div style="width: 200px;" >
             <div *ngIf="hideInput | async"  class="d-flex" >
