--- a/src/app/features/users-components/user-details/user-details.component.html
+++ b/src/app/features/users-components/user-details/user-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="row mt-4">
-<div class="col-lg-1 col-12">
+<div class="col-lg-1 col-12 mb-4">
     <a routerLink="/users" class="text-white">
         <button class="btn btn-primary">
             <mat-icon style="font-size: 28px;"> keyboard_backspace</mat-icon>
