adding hiding overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
     box-sizing: border-box;
     font-family: "Radio Canada Big", sans-serif;
     text-decoration: none !important;
