--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,9 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&family=Readex+Pro:wght@160..700&display=swap');
 *{
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
     box-sizing: border-box;
-    font-family: "Radio Canada Big", sans-serif;
+    font-family:  sans-serif;
     text-decoration: none !important;
     color: white;
     
