--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<section class="container row">
+<section class="row">
     <div class="col-lg-3 col-12 "> 
         <app-sidebar></app-sidebar>
     </div>
